--- a/financas.jrxml
+++ b/financas.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="financas" language="java" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a369a685-7b16-4e5b-977e-4db5e516ba91">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="financas" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a369a685-7b16-4e5b-977e-4db5e516ba91">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -79,7 +79,7 @@
 				<reportElement uuid="f67abb8c-508c-494b-b80c-b257217972f5" positionType="FixRelativeToBottom" x="0" y="19" width="555" height="1"/>
 			</line>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="f4e0b0e6-17d4-4cbd-9a67-3c03f7a35b38" x="1" y="0" width="111" height="20"/>
+				<reportElement uuid="f4e0b0e6-17d4-4cbd-9a67-3c03f7a35b38" x="0" y="0" width="111" height="20"/>
 				<textElement>
 					<font size="14"/>
 				</textElement>
